--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ readme = "README.md"
 proc-macro = true
 
 [dependencies]
+syn = "0.15.39"
+quote = "0.6.12"
+proc-macro2 = "0.4.30"
+
+[dev-dependencies]
+snafu = "0.4.1"
